Some fixes in service layer with controllers